@@ -1,2 +1,2 @@
-VERSION=7.23.01
+VERSION=7.23.02
 YEARS=1992-2015
