@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2015" "icmake\&.7\&.23\&.01\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2015" "icmake\&.7\&.23\&.02\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
