@@ -1,4 +1,4 @@
-.TH "icmbuild" "1" "1992\-2015" "icmake\&.7\&.23\&.01\&.tar\&.gz" "A generic program maintenance script"
+.TH "icmbuild" "1" "1992\-2015" "icmake\&.7\&.23\&.02\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
