@@ -1,4 +1,4 @@
-.TH "icmconf" "7" "1992\-2015" "icmake\&.7\&.23\&.01\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
+.TH "icmconf" "7" "1992\-2015" "icmake\&.7\&.23\&.02\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
 
 .PP 
 .SH "NAME"
