@@ -1,4 +1,4 @@
-.TH "icmstart" "1" "1992\-2015" "icmake\&.7\&.23\&.01\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992\-2015" "icmake\&.7\&.23\&.02\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
