@@ -1,4 +1,4 @@
-.TH "icmstart\&.rc" "7" "1992\-2015" "icmake\&.7\&.23\&.01\&.tar\&.gz" "icmstart resource file"
+.TH "icmstart\&.rc" "7" "1992\-2015" "icmake\&.7\&.23\&.02\&.tar\&.gz" "icmstart resource file"
 
 .PP 
 .SH "NAME"
